--- a/WebContent/pages/pessoa/pessoaPesquisa.xhtml
+++ b/WebContent/pages/pessoa/pessoaPesquisa.xhtml
@@ -26,8 +26,10 @@
 				filteredValue="#{pessoaBean.listaPessoasFiltradas}" var="pessoa"
 				rows="10" paginator="true">
 				<f:facet name="footer">
-					<p:commandButton value="Novo"
-						action="/pages/pessoa/pessoaCadastro.xhtml?faces-redirect=true" />
+					<p:button value="Novo"
+						outcome="/pages/pessoa/pessoaCadastro.xhtml?faces-redirect=true" >
+						<f:param name="pesacao" value="novo"/>
+					</p:button>
 				</f:facet>
 				<p:column headerText="Código" filterBy="#{pessoa.id}"
 					sortBy="#{pessoa.id}">
@@ -41,10 +43,12 @@
 				<p:column headerText="Opções">
 					<p:button value="Editar"
 						outcome="/pages/pessoa/pessoaCadastro.xhtml?faces-redirect=true">
+						<f:param name="pesacao" value="editar"/>
 						<f:param name="pessId" value="#{pessoa.id}" />
 					</p:button>
 					<p:button value="Excluir"
 						outcome="/pages/pessoa/pessoaCadastro.xhtml?faces-redirect=true">
+						<f:param name="pesacao" value="excluir"/>
 						<f:param name="pessId" value="#{pessoa.id}" />
 					</p:button>
 				</p:column>
