Versão 1.0: cadastro do pagamento e melhoramento da interface

--- a/WebContent/pages/endereco/enderecoCadastro.xhtml
+++ b/WebContent/pages/endereco/enderecoCadastro.xhtml
@@ -9,6 +9,9 @@
 <ui:composition template="/templates/modeloGeral.xhtml">
 	<ui:define name="metadata">
 		<f:metadata>
+			<f:viewParam name="endacao" value="#{enderecoBean.acao}"/>
+			<f:viewParam name="endId" value="#{enderecoBean.codigo}"/>
+		
 			<f:event listener="#{enderecoBean.carregarDados}"
 				type="preRenderView" />
 		</f:metadata>
@@ -27,38 +30,50 @@
 				<p:inputText maxlength="50" size="30"
 					value="#{enderecoBean.enderecoCadastrado.logradouro}"
 					readonly="#{enderecoBean.acao == 'excluir'}">
+					<f:validateBean />
 				</p:inputText>
 
 				<p:outputLabel value="Número:" />
 				<p:inputText maxlength="30" size="30"
 					value="#{enderecoBean.enderecoCadastrado.numero}"
-					readonly="#{enderecoBean.acao == 'excluir'}" />
+					readonly="#{enderecoBean.acao == 'excluir'}">
+					<f:validateBean />
+				</p:inputText>
 
 				<p:outputLabel value="Complemento:" />
 				<p:inputText maxlength="50" size="30"
 					value="#{enderecoBean.enderecoCadastrado.complemento}"
-					readonly="#{enderecoBean.acao == 'excluir'}" />
+					readonly="#{enderecoBean.acao == 'excluir'}">
+					<f:validateBean />
+				</p:inputText>
 
 				<p:outputLabel value="Bairro:" />
 				<p:inputText maxlength="50" size="30"
 					value="#{enderecoBean.enderecoCadastrado.bairro}"
-					readonly="#{enderecoBean.acao == 'excluir'}" />
+					readonly="#{enderecoBean.acao == 'excluir'}">
+					<f:validateBean />
+				</p:inputText>
 
 				<p:outputLabel value="CEP:" />
 				<p:inputMask mask="99999-999" size="10"
 					value="#{enderecoBean.enderecoCadastrado.cep}"
 					readonly="#{enderecoBean.acao == 'excluir'}">
+					<f:validateBean />
 				</p:inputMask>
 
 				<p:outputLabel value="Cidade:" />
 				<p:inputText maxlength="50" size="30"
 					value="#{enderecoBean.enderecoCadastrado.cidade}"
-					readonly="#{enderecoBean.acao == 'excluir'}" />
+					readonly="#{enderecoBean.acao == 'excluir'}">
+					<f:validateBean />
+				</p:inputText>
 
 				<p:outputLabel value="Estado:" />
 				<p:inputText maxlength="30" size="30"
 					value="#{enderecoBean.enderecoCadastrado.estado}"
-					readonly="#{enderecoBean.acao == 'excluir'}" />
+					readonly="#{enderecoBean.acao == 'excluir'}">
+					<f:validateBean />
+				</p:inputText>
 
 			</h:panelGrid>
 
@@ -70,8 +85,8 @@
 					actionListener="#{enderecoBean.salvar}"
 					update=":msgGlobal :formCadEndereco:pnlEnderecoDados"
 					rendered="#{enderecoBean.acao == 'novo'}" />
-				<p:commandButton value="Voltar"
-					action="/pages/endereco/enderecoPesquisa.xhtml?faces-redirect=true" />
+				<p:button value="Voltar"
+					outcome="/pages/endereco/enderecoPesquisa.xhtml?faces-redirect=true" />
 				<p:commandButton value="Editar"
 					actionListener="#{enderecoBean.editar}" update=":msgGlobal"
 					rendered="#{enderecoBean.acao == 'editar'}" />
