--- a/WebContent/pages/usuario/usuarioCadastro.xhtml
+++ b/WebContent/pages/usuario/usuarioCadastro.xhtml
@@ -9,7 +9,12 @@
 <ui:composition template="/templates/modeloGeral.xhtml">
 	<ui:define name="metadata">
 		<f:metadata>
+			<f:viewParam name="useracao" value="#{usuariosBean.acao}" />
+			<f:viewParam name="userId" value="#{usuariosBean.codigo}" />
+
 			<f:event listener="#{usuariosBean.carregarDados}"
+				type="preRenderView" />
+			<f:event listener="#{pessoaFisicaBean.carregarDados}"
 				type="preRenderView" />
 		</f:metadata>
 	</ui:define>
@@ -25,12 +30,18 @@
 			<h:panelGrid id="pnlUserDados" columns="3">
 				<p:outputLabel value="Login:" />
 				<p:inputText maxlength="50" size="30"
-					value="#{usuariosBean.usuarioCadastro.login}" />
+					value="#{usuariosBean.usuarioCadastro.login}"
+					readonly="#{usuariosBean.acao == 'excluir'}">
+					<f:validateBean />
+				</p:inputText>
 				<p:outputLabel />
 
 				<p:outputLabel value="Senha:" />
-				<p:inputText maxlength="50" size="30"
-					value="#{usuariosBean.usuarioCadastro.senha}" />
+				<p:password maxlength="50" size="30"
+					value="#{usuariosBean.usuarioCadastro.senha}"
+					readonly="#{usuariosBean.acao == 'excluir'}">
+					<f:validateBean />
+				</p:password>
 				<p:outputLabel />
 
 				<p:outputLabel value="Perfil:" />
@@ -39,6 +50,7 @@
 					<f:selectItem itemValue="funcionario" itemLabel="Funcionário" />
 					<f:selectItem itemValue="gerente" itemLabel="Gerente" />
 					<f:selectItem itemValue="administrador" itemLabel="Administrador" />
+					<f:validateBean />
 				</p:selectOneMenu>
 				<p:outputLabel />
 
@@ -47,18 +59,23 @@
 					<f:selectItem itemValue="" itemLabel="Selecione o status" />
 					<f:selectItem itemValue="A" itemLabel="Ativo" />
 					<f:selectItem itemValue="I" itemLabel="Inativo" />
+					<f:validateBean />
 				</p:selectOneMenu>
 				<p:outputLabel />
 
-				<p:outputLabel value="Pessoa Física:" />
-				<p:selectOneMenu value="#{usuariosBean.usuarioCadastro.pfisica}"
+				<p:outputLabel value="Colaborador:" />
+				<p:selectOneMenu id="listaPessoaFisica"
+					value="#{usuariosBean.usuarioCadastro.pfisica}"
 					converter="pessoaFisicaConverter" style="width: 99%;">
 					<f:selectItem itemValue="" itemLabel="Selecione a pessoa" />
 					<f:selectItems value="#{usuariosBean.listaPessoasFisicas}"
 						var="pfisica" itemValue="#{pfisica}"
 						itemLabel="#{pfisica.pessoa.nome}" />
+					<f:validateBean />
 				</p:selectOneMenu>
-				<p:outputLabel />
+				<p:commandButton value="Novo"
+					oncomplete="PF ('DlgPessoaFisica').show();" />
+
 			</h:panelGrid>
 
 			<h:panelGrid columns="3">
@@ -69,16 +86,128 @@
 					actionListener="#{usuariosBean.salvar}"
 					update=":msgGlobal :formCadUser:pnlUserDados"
 					rendered="#{usuariosBean.acao == 'novo'}" />
-				<p:commandButton value="Voltar"
-					action="/pages/usuario/usuarioPesquisa.xhtml?faces-redirect=true" />
+				<p:button value="Voltar"
+					outcome="/pages/usuario/usuarioPesquisa.xhtml?faces-redirect=true" />
 				<p:commandButton value="Editar"
 					actionListener="#{usuariosBean.editar}" update=":msgGlobal"
 					rendered="#{usuariosBean.acao == 'editar'}" />
-				<p:commandButton value="Salvar"
+				<p:commandButton value="Excluir"
 					actionListener="#{usuariosBean.excluir}" update=":msgGlobal"
 					rendered="#{usuariosBean.acao == 'excluir'}" />
 			</h:panelGrid>
 		</h:form>
+		<!-- Dialogo para o cadastro de pessoas físicas -->
+		<p:dialog closable="true" draggable="true" modal="true"
+			resizable="false" header="Cadastro Pessoa Física"
+			widgetVar="DlgPessoaFisica" appendTo="@(body)">
+			<h:form id="formCadPessoaFisica">
+				<h:panelGrid id="pnlPessoaDados" columns="3">
+
+					<p:outputLabel value="Pessoa:" />
+					<p:selectOneMenu id="listaPessoa"
+						value="#{pessoaFisicaBean.pfisicaCadastro.pessoa}"
+						converter="pessoaConverter" filter="true"
+						filterMatchMode="startsWith" style="width: 99%;">
+						<f:selectItem itemValue="" itemLabel="Selecione a pessoa" />
+						<f:selectItems value="#{pessoaFisicaBean.listaPessoas}"
+							var="pessoa" itemValue="#{pessoa}" itemLabel="#{pessoa.nome}" />
+						<f:validateBean />
+					</p:selectOneMenu>
+					<p:outputLabel />
+
+					<p:outputLabel value="CPF:" />
+					<p:inputMask mask="999.999.999-99" size="14"
+						value="#{pessoaFisicaBean.pfisicaCadastro.cpf}"
+						readonly="#{pessoaFisicaBean.acao == 'excluir'}">
+						<f:validateBean />
+					</p:inputMask>
+					<p:outputLabel />
+
+					<p:outputLabel value="RG:" />
+					<p:inputText maxlength="14" size="10"
+						value="#{pessoaFisicaBean.pfisicaCadastro.rg}"
+						readonly="#{pessoaFisicaBean.acao == 'excluir'}">
+						<f:validateBean />
+					</p:inputText>
+					<p:outputLabel />
+
+					<p:outputLabel value="Pai:" />
+					<p:inputText maxlength="50" size="30"
+						value="#{pessoaFisicaBean.pfisicaCadastro.pai}"
+						readonly="#{pessoaFisicaBean.acao == 'excluir'}">
+						<f:validateBean />
+					</p:inputText>
+					<p:outputLabel />
+
+					<p:outputLabel value="Mãe:" />
+					<p:inputText maxlength="50" size="30"
+						value="#{pessoaFisicaBean.pfisicaCadastro.mae}"
+						readonly="#{pessoaFisicaBean.acao == 'excluir'}">
+						<f:validateBean />
+					</p:inputText>
+					<p:outputLabel />
+
+					<p:outputLabel value="Telefone:" />
+					<p:inputMask mask="(99)9999-9999" size="13"
+						value="#{pessoaFisicaBean.pfisicaCadastro.telefone}"
+						readonly="#{pessoaFisicaBean.acao == 'excluir'}">
+						<f:validateBean />
+					</p:inputMask>
+					<p:outputLabel />
+
+					<p:outputLabel value="RG:" />
+					<p:inputMask mask="(99)9999-9999" size="13"
+						value="#{pessoaFisicaBean.pfisicaCadastro.celular}"
+						readonly="#{pessoaFisicaBean.acao == 'excluir'}">
+						<f:validateBean />
+					</p:inputMask>
+					<p:outputLabel />
+
+					<p:outputLabel value="Email:" />
+					<p:inputText maxlength="50" size="30"
+						value="#{pessoaFisicaBean.pfisicaCadastro.email}"
+						readonly="#{pessoaFisicaBean.acao == 'excluir'}">
+						<f:validateBean />
+					</p:inputText>
+					<p:outputLabel />
+
+					<p:outputLabel value="Sexo:" />
+					<p:selectOneMenu value="#{pessoaFisicaBean.pfisicaCadastro.sexo}">
+						<f:selectItem itemValue="" itemLabel="Selecione o sexo" />
+						<f:selectItem itemValue="M" itemLabel="Masculino" />
+						<f:selectItem itemValue="F" itemLabel="Feminino" />
+						<f:validateBean />
+					</p:selectOneMenu>
+					<p:outputLabel />
+
+					<p:outputLabel value="Data de Nascimento:" />
+					<p:calendar
+						value="#{pessoaFisicaBean.pfisicaCadastro.dataNascimento}"
+						pattern="dd/MM/yyyy" mask="true" mode="popup"
+						readonly="#{pessoaFisicaBean.acao == 'excluir'}">
+						<f:convertDateTime pattern="dd/MM/yyyy" />
+						<f:validateBean />
+					</p:calendar>
+					<p:outputLabel />
+
+					<p:outputLabel value="Observações:" />
+					<p:inputTextarea maxlength="50" size="30"
+						value="#{pessoaFisicaBean.pfisicaCadastro.observacao}"
+						readonly="#{pessoaFisicaBean.acao == 'excluir'}">
+						<f:validateBean />
+					</p:inputTextarea>
+					<p:outputLabel />
+				</h:panelGrid>
+				<h:panelGrid columns="2">
+					<p:commandButton value="Salvar"
+						actionListener="#{pessoaFisicaBean.salvar}"
+						update=":msgGlobal :formCadUser:listaPessoaFisica"
+						oncomplete="PF('DlgPessoaFisica').hide();" />
+
+					<p:commandButton value="Voltar" onclick="PF('DlgPessoaFisica').hide();" />
+				</h:panelGrid>
+			</h:form>
+		</p:dialog>
 	</ui:define>
 </ui:composition>
 
